--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,137 @@
+0.5.2 (2018-09-12)
+------------------
+
+Note: This release does NOT change the libsigrokdecode public C API in
+incompatible ways. This means existing frontends should not require any
+changes. However, individual PDs and their output changed, which may
+require some adaptations on the user's side in some cases.
+
+ * New supported protocol decoders:
+   - mcs48            Intel MCS-48 external memory access protocol
+   - st7735           Sitronix ST7735 TFT controller protocol
+   - atsha204a        Microchip ATSHA204A CryptoAuthentication device
+   - cfp              100 Gigabit C form-factor pluggable (CFP) protocol
+   - jtag_ejtag       MIPS EJTAG protocol
+   - swim             STM8 Single Wire Interface Module (SWIM) protocol
+   - cec              HDMI Consumer Electronics Control (CEC) protocol
+   - miller           Miller encoding protocol
+   - ook              On-off keying protocol
+   - ook_oregon       Oregon Scientific weather sensor protocol
+   - ook_vis          OOK visualisation in various formats
+ * Various minor performance improvements in the backend.
+ * Fix an issue causing decoder termination to take a long time.
+ * Fix multiple self.put() memory leaks (bug #329).
+ * Fix multiple memory leaks reported by scan-build.
+ * Show a backtrace when the decode aborts due to an error (bug #1158).
+ * Perform the log level check for non-default handlers as well (bug #698).
+ * Fix multiple compiler warnings.
+ * Compiler: Add -Wshadow -Wformat=2 -Wno-format-nonliteral -Wfloat-equal.
+ * Build system: Add Python 3.7 support.
+ * Fix a 'make install' issue that happens with Python >= 3.7.
+ * Add two missing Python GIL release operations.
+ * libsigrokdecode API changes:
+   - Add the srd_log_callback_get() API call.
+   - Add the SRD_ERR_TERM_REQ error code.
+ * dcf77:
+   - Annotate invalid dow and month fields, do not abort execution (bug #1173).
+   - Annotate unexpected bit numbers and values, do not abort execution.
+ * spiflash:
+   - Add basic Adesto AT45DBxx support (WRITE1/2, STATUS).
+   - Add Adesto AT45DB161E metadata.
+ * jtag:
+   - Fix shifting of registers (bug #1066).
+ * jtag_stm32:
+   - Fix handling of boundary scan TAP and incorrect state transitions.
+ * eeprom24xx:
+   - Add ON Semi CAT24C256 and CAT24M01 support.
+ * counter:
+   - Emit wider annotations to improve readability in UIs (bug #1210).
+   - Add support for user specified initial counter values (bug #1229).
+   - Add an option to ignore a certain number of edges.
+   - Let the user decide how to handle the initial dead_cycles state.
+ * mdio:
+   - Accept MDIO READ without previous ADDRESS command (bug #1258).
+ * edid:
+   - Add support for extension blocks.
+   - Various annotation improvements.
+ * spi:
+   - Fix an issue causing an AttributeError during certain decodes.
+ * usb_power_delivery:
+   - Emit more details in annotations (power, PDO type, RDO info).
+   - Add PPS support.
+   - Add better USB Power Delivery 3.0 support.
+
+0.5.1 (2018-04-12)
+------------------
+
+Note: This release does NOT change the libsigrokdecode public C API in
+incompatible ways. This means existing frontends should not require any
+changes. However, individual PDs and their output changed, which may
+require some adaptations on the user's side in some cases.
+
+ * New supported protocol decoders:
+   - ac97             Audio and modem control for PC systems
+   - ds243x           Maxim DS243x series 1-Wire EEPROM protocol
+   - maple_bus        Maple bus peripheral protocol for SEGA Dreamcast
+   - morse            Demodulated morse code protocol
+   - graycode         Accumulate rotary encoder increments, timing statistics
+   - counter          Count number of edges
+   - sda2506          Serial nonvolatile 1-Kbit EEPROM
+   - rc_encode        PT2262/HX2262/SC5262 remote control encoder protocol
+ * Updated build requirements:
+   - libglib >= 2.34
+ * New API calls:
+   - srd_searchpaths_get(): Retrieve PD search paths.
+   - srd_session_terminate_reset(): Terminate currently executing decoders
+     in a session, reset internal state. Allows re-using a session.
+ * can:
+   - Introduce clock synchronization (bug #990).
+   - Fix incorrect stuff bit handling (bug #1085).
+ * i2c:
+   - Don't drop the first sample of input data.
+   - Make input samplerate optional (bug #1076).
+ * i2s:
+   - Binary output: Make 32-bit WAV files, set file size to 4GB.
+   - Fix unportable use of struct.pack().
+   - Make samplerate meta data optional.
+ * stepper_motor:
+   - Make samplerate meta data optional.
+ * pwm:
+   - Fixup sample numbers for binary output.
+ * onewire_network:
+   - Fixup start samplenumber for annotations.
+ * lpc:
+   - Improve robustness when decoding unexpected input data.
+ * ir_nec:
+   - Make timing margin relative.
+   - Optionally accept input signals that include the carrier.
+ * usb_request:
+   - Handle CONTROL transfer protocol stalls.
+ * usb_power_delivery:
+   - Enforce numerical order of RDO/PDO flag annotations, enforce check
+     order for start-of-packet sequences (bug #1090).
+ * parallel:
+   - Cope with sparse input maps, assume zero for unconnected pins (bug #1088).
+   - Unbreak and improve "word" de-multiplexing.
+   - Implement consistent number formatting.
+   - Expand 'wordsize' description (bits vs cycles).
+ * spi:
+   - Cope when a sample rate of 0 was configured (bug #1118).
+ * Acquire/release the Python GIL where needed to avoid threading issues.
+   This allows frontends to call libsigrokdecode API functions from different
+   threads without running into issues.
+ * Convert all protocol decoders to PD API version 3.
+ * Support for the old PD API version 2 has been removed.
+ * Unbreak the execution of Decoder.wait() with empty condition.
+ * self.wait(): Accept more forms of "unconditional wait" (None, no args).
+ * Fix a compiler warning on Mac OS X.
+ * configure.ac: Add missing PKG_PROG_PKG_CONFIG and AC_C_BIGENDIAN.
+ * Add a reset() method to all PDs which resets internal variable state.
+ * Clarify and improve channel mapping debug output.
+ * Print decoder and system search paths in debug output.
+ * Drop overly verbose log messages about (un)loading PDs.
+ * HACKING: Prefer git pull requests over mailing list patches.
+
 0.5.0 (2017-06-12)
 ------------------
 
@@ -175,7 +309,7 @@ means it is NOT backwards-compatible and frontends will need updates.
  * jitter:
    - Avoid Unicode string literals (bug #569).
  * jtag:
-   - Fix/enable OUTPUT_PYTHON output.
+   - Fix/enable OUT_PYTHON output.
    - Add more annotations, fix a SHIFT-IR/-DR issue.
  * jtag_stm32:
    - Fix incorrect handling of registers.
@@ -197,7 +331,7 @@ means it is NOT backwards-compatible and frontends will need updates.
  * pwm:
    - Avoid Unicode string literals (bug #569).
  * spi:
-   - OUTPUT_PYTHON docs: Fix order of MISO/MOSI data items.
+   - OUT_PYTHON docs: Fix order of MISO/MOSI data items.
    - Tell stacked decoders about missing CS# signal.
    - Add binary output facilities for MISO/MOSI (bug #424).
    - Don't decode data lines if CS# isn't asserted (bug #559).
