--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Forked to expiriment with Pulseview build on MacOS - May 24, 2025
+
 -------------------------------------------------------------------------------
 README
 -------------------------------------------------------------------------------
@@ -91,7 +93,7 @@ Mailing list
 IRC
 ---
 
-You can find the sigrok developers in the #sigrok IRC channel on Libera.Chat.
+You can find the sigrok developers in the #sigrok IRC channel on Freenode.
 
 
 Website
